# gm-cpp-template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/presets/: windows.json
cmake/presets/architectures/: architectures.json
cmake/presets/base/: base.json
cmake/presets/buildTypes/: buildTypes.json
cmake/presets/compilers/: cl.json  clang.json  gcc.json
cmake/presets/generators/: Ninja.json  VS.json
cmake/presets/toolsets/Linux/: ninja-clang.json  ninja-gcc.json
cmake/presets/toolsets/Windows/: ninja-clang.json  vs-msvc.json
src/: CMakeLists.txt  main.cpp
